fix button alignment

--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -3,6 +3,7 @@ ul.nav-underlined {
   overflow-x: auto;
   scrollbar-width: none;
   padding-left: 0;
+  margin-bottom: 0;
 
   li {
     display: inline-block;
